CRUD de entidada Category terminada,CRUD de entidad ImageUrls falta delet